# cosmic-applets-gs

./: README.md
cosmic-win-list/: Cargo.toml  justfile  test.sh
cosmic-win-list/data/: com.system76.CosmicWinList.desktop
cosmic-win-list/i18n/en/: cosmic_win_list.ftl
cosmic-win-list/src/: app.rs  config.rs  lib.rs  localize.rs  main.rs
