[package]
name = "cosmic-win-list"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.102"
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "a7d2d7a" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "a7d2d7a" }
futures = "0.3"
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
image = { version = "0.25.9", default-features = false }
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "desktop-systemd-scope",
    "winit",
] }
memmap2 = "0.9.10"
fastrand = "2.3.0"
rust-embed = "8.11.0"
rustix = { version = "1.1", features = ["fs", "process"] }
rustc-hash = "2.1"
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
tokio = { version = "1.49.0", features = ["full"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1"
url = "2.5.8"
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", rev = "32283d7" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", rev = "32283d7" }